[package]
name = "historical-load-bench"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
log.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-client.workspace = true
solana-core.workspace = true
solana-genesis.workspace = true
solana-measure.workspace = true
solana-metrics.workspace = true
solana-rpc-client-api.workspace = true
solana-sdk = { workspace = true }
solana-streamer.workspace = true
solana-tps-client.workspace = true
solana-tpu-client.workspace = true
solana-transaction-status.workspace = true
spl-instruction-padding.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[dev-dependencies]
serial_test = { workspace = true }
solana-feature-set = { workspace = true }
solana-local-cluster = { workspace = true }
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
solana-test-validator = { workspace = true }
tempfile = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []